# coterie_size_model

./: Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
size_up_model/: dataset.py  features_2.py
size_up_model/modeling/: predict.py  predict_2.py  train_2.py
utils/: data_utils.py
