[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "size_up_model"
version = "0.0.1"
description = "A ML model to predict if cCoterie customers are ready to size up to the next diaper product or size."
authors = [
  { name = "Ian Greenfield" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["size_up_model"]
force_sort_within_sections = true
