[metadata]
name = coterie_size_up_model
version = 1.0.0
author = Ian Greenfield
author_email = ian.greenfield@coterie.com
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://your_project_url.example.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy
    pandas
    matplotlib
    python-dotenv
    scikit-learn
    tqdm
    typer

[flake8]
ignore = E731,E266,E501,C901,W503
max-line-length = 99
exclude = .git,notebooks,references,models,data
